--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
 <div class="header">
-    <h1 class="title">Bessere Abifahrt</h1>
+    <h1 class="title">Bessere Abifahrt - WIP v1</h1>
     <h2 class="subtitle">Unterkunft- und Preisübersicht</h2>
 </div>
 <div id="content">
