--- a/index.html
+++ b/index.html
@@ -2,14 +2,16 @@
 <html lang="de">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="stylesheet" href="global_style.css">
     <link rel="stylesheet" href="index_style.css">
+    <link rel="stylesheet" href="index_mobile_style.css">
 
     <title>Bessere Abifahrt</title>
 </head>
 <body>
 <div class="header">
-    <h1 class="title">Bessere Abifahrt - WIP v4</h1>
+    <h1 class="title">Bessere Abifahrt - WIP v15</h1>
     <h2 class="subtitle">Unterkunft- und Preisübersicht</h2>
 </div>
 <div id="content">
