--- a/Ferienhaus_Apfelbluete_by_Heinke_Wohnraum.html
+++ b/Ferienhaus_Apfelbluete_by_Heinke_Wohnraum.html
@@ -53,6 +53,12 @@
             <td>Naja halt da lang und dann dort.</td>
         </tr>
     </table>
+    <table class="location-table">
+        <tr>
+            <td class="location-header">Max Pers. Zahl:</td>
+            <td>13</td>
+        </tr>
+    </table>
     <div id="bed-info-header-div">
         <p id="bed-info-header">Bettenverteilung:</p>
         <p id="bed-info-header-info">(Nur Räume mit Betten aufgeführt)</p>
