--- a/test2.html
+++ b/test2.html
@@ -50,6 +50,12 @@
             <td></td>
         </tr>
     </table>
+    <table class="location-table">
+        <tr>
+            <td class="location-header">Max Pers. Zahl:</td>
+            <td>15</td>
+        </tr>
+    </table>
     <div id="bed-info-header-div">
         <p id="bed-info-header">Bettenverteilung:</p>
         <p id="bed-info-header-info">(Nur Räume mit Betten aufgeführt)</p>
