--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 <body>
 <div class="header">
-    <h1 class="title">Bessere Abifahrt - WIP v165</h1>
+    <h1 class="title">Bessere Abifahrt - WIP v193</h1>
     <h2 class="subtitle">Unterkunft- und Preisübersicht</h2>
 </div>
 <div id="content">
@@ -35,7 +35,7 @@
 </td>
             </tr>
         </table>
-        <h2>Other</h2>
+        <h2>Anderes</h2>
         <div class="selection" id="other-selection">
             <div id="new-filter">Neu</div>
         </div>
