--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="de">
+<html lang="de" xmlns="http://www.w3.org/1999/html">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -11,12 +11,12 @@
 </head>
 <body>
 <div class="header">
-    <h1 class="title">Bessere Abifahrt - WIP v193</h1>
-    <h2 class="subtitle">Unterkunft- und Preisübersicht</h2>
+    <h1 class="title">Bessere Abifahrt</h1>
+    <h2 class="subtitle">Unterkunft- und Preisübersicht</h2><!--<br>WIP v237-->
 </div>
 <div id="content">
     <div id="filter-div">
-        <h1>Filter</h1>
+<!--        <h1>Filter</h1>-->
         <h2>Ort</h2>
         <table>
             <tr>
