--- a/Ferienhaus_Apfelbluete_by_Heinke_Wohnraum.html
+++ b/Ferienhaus_Apfelbluete_by_Heinke_Wohnraum.html
@@ -2,11 +2,13 @@
 <html lang="de">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1"/>
     <title>Bessere Abifahrt - Unterkunft Ferienhaus Apfelblüte by Heinke Wohnraum</title>
 
     <link rel="stylesheet" href="accommodation_details_image_viewer.css">
     <link rel="stylesheet" href="global_style.css">
     <link rel="stylesheet" href="accommodation_details_style.css">
+    <link rel="stylesheet" href="accommodation_details_mobile_style.css">
 </head>
 <body>
 <div id="content">
@@ -32,41 +34,45 @@
             </tr>
         </table>
     </div>
-    <table class="location-table">
-        <tr>
-            <td class="location-header">Lage:</td>
-            <td>Deutschland, Baden-Württemberg in der Nähe vom Bodensee</td>
-        </tr>
-        <tr>
-            <td class="location-header">Addresse:</td>
-            <td><a href="https://www.google.com/maps/search/7 Azenbergstraße, 88677 Markdorf" target="_blank"
-                   rel="noopener noreferrer">7 Azenbergstraße, 88677 Markdorf</a></td>
-        </tr>
-    </table>
-    <table class="location-table">
-        <tr>
-            <td class="location-header">Anreisedauer:</td>
-            <td>3.5h</td>
-        </tr>
-        <tr>
-            <td class="location-header">Beschreibung:</td>
-            <td>Naja halt da lang und dann dort.</td>
-        </tr>
-    </table>
-    <table class="location-table">
-        <tr>
-            <td class="location-header">Max Pers. Zahl:</td>
-            <td>13</td>
-        </tr>
-    </table>
-    <div id="bed-info-header-div">
-        <p id="bed-info-header">Bettenverteilung:</p>
-        <p id="bed-info-header-info">(Nur Räume mit Betten aufgeführt)</p>
+    <div id="location-info">
+        <table class="location-table" id="table1">
+            <tr>
+                <td class="location-header">Lage:</td>
+                <td>Deutschland, Baden-Württemberg in der Nähe vom Bodensee</td>
+            </tr>
+            <tr>
+                <td class="location-header">Addresse:</td>
+                <td><a href="https://www.google.com/maps/search/7 Azenbergstraße, 88677 Markdorf" target="_blank"
+                       rel="noopener noreferrer">7 Azenbergstraße, 88677 Markdorf</a></td>
+            </tr>
+        </table>
+        <table class="location-table" id="table2">
+            <tr>
+                <td class="location-header">Anreisedauer:</td>
+                <td>3.5h</td>
+            </tr>
+            <tr>
+                <td class="location-header">Beschreibung:</td>
+                <td>Naja halt da lang und dann dort.</td>
+            </tr>
+        </table>
     </div>
-    <table id="bed-info-table"><tr><td class="bed-header">Raum 1:</td><td>2x Doppelbett, 1x Einzelbett</td></tr>
+    <div id="PersonInfo">
+        <table class="location-table">
+            <tr>
+                <td class="location-header">Max Pers. Zahl:</td>
+                <td>13</td>
+            </tr>
+        </table>
+        <div id="bed-info-header-div">
+            <p id="bed-info-header">Bettenverteilung:</p>
+            <p id="bed-info-header-info">(Nur Räume mit Betten aufgeführt)</p>
+        </div>
+        <table id="bed-info-table"><tr><td class="bed-header">Raum 1:</td><td>2x Doppelbett, 1x Einzelbett</td></tr>
 <tr><td class="bed-header">Raum 2:</td><td>1x Doppelbett</td></tr>
-<tr><td class="bed-header">Raum 3:</td><td>1x Doppelbett, 3x Einzelbett</td></tr>
+<tr><td class="bed-header">Raum 3:</td><td>1x Doppelbett, 3x Einzelbett, 1x Schlafsofa</td></tr>
 </table>
+    </div>
     <p id="information-date">* Der Preis ist für den Zeitraum vom 3.6. - 7.6.2024 und auf dem Stand vom 15.4.2023.</p>
     <p id="additional-information">Weitere Informationen auf <a href="https://www.booking.com/Share-dWOpjU" target="_blank"
                                                                 rel="noopener noreferrer">Booking.com</a>.</p>
