--- a/test1.html
+++ b/test1.html
@@ -31,6 +31,9 @@
             </tr>
         </table>
     </div>
+    <div id="description-div">
+        
+    </div>
     <div id="location-info">
         <table class="location-table" id="table1">
             <tr>
@@ -68,6 +71,14 @@
         <table id="bed-info-table"><tr><td class="bed-header">Raum 1:</td><td></td></tr>
 </table>
     </div>
+    <table id="ProContra-table">
+        <tr>
+            <th id="contra-header">Contra</th>
+            <th id="pro-header">Pro</th>
+        </tr>
+        <tr><td></td><td></td></tr>
+
+    </table>
     <p id="information-date">* Der Preis ist für den Zeitraum vom  und auf dem Stand vom .</p>
     <p id="additional-information">Weitere Informationen auf <a href="" target="_blank"
                                                                 rel="noopener noreferrer">Booking.com</a>.</p>
