--- a/Ferienhaus_Apfelbluete_by_Heinke_Wohnraum.html
+++ b/Ferienhaus_Apfelbluete_by_Heinke_Wohnraum.html
@@ -34,6 +34,9 @@
             </tr>
         </table>
     </div>
+    <div id="description-div">
+        Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.
+    </div>
     <div id="location-info">
         <table class="location-table" id="table1">
             <tr>
@@ -73,6 +76,15 @@
 <tr><td class="bed-header">Raum 3:</td><td>1x Doppelbett, 3x Einzelbett, 1x Schlafsofa</td></tr>
 </table>
     </div>
+    <table id="ProContra-table">
+        <tr>
+            <th id="contra-header">Contra</th>
+            <th id="pro-header">Pro</th>
+        </tr>
+        <tr><td>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et</td><td>c</td></tr>
+<tr><td>b</td><td>d</td></tr>
+
+    </table>
     <p id="information-date">* Der Preis ist für den Zeitraum vom 3.6. - 7.6.2024 und auf dem Stand vom 15.4.2023.</p>
     <p id="additional-information">Weitere Informationen auf <a href="https://www.booking.com/Share-dWOpjU" target="_blank"
                                                                 rel="noopener noreferrer">Booking.com</a>.</p>
