--- a/Ferienhaus_Apfelbluete_by_Heinke_Wohnraum.html
+++ b/Ferienhaus_Apfelbluete_by_Heinke_Wohnraum.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1"/>
-    <title>Bessere Abifahrt - Unterkunft Ferienhaus Apfelblüte by Heinke Wohnraum</title>
+    <title>Ferienhaus Apfelblüte by Heinke Wohnraum</title>
 
     <link rel="stylesheet" href="accommodation_details_image_viewer.css">
     <link rel="stylesheet" href="global_style.css">
