--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
 <div class="header">
     <h1 class="title">Bessere Abifahrt</h1>
-    <h2 class="subtitle">Unterkunft- und Preisübersicht</h2><!--<br>WIP v411-->
+    <h2 class="subtitle">Unterkunft- und Preisübersicht</h2><!--<br>WIP v428-->
 </div>
 <div id="content">
     <div id="filter-div">
@@ -35,6 +35,8 @@
 </td>
             </tr>
         </table>
+        <h2>Umgebung</h2>
+        <div class="selection" id="surrounding-selection"><div style="background-color: #55FF55;">Wald</div><div style="background-color: #5555FF;">Fluss</div><div style="background-color: #FF5555;">Rot</div></div>
         <h2>Anderes</h2>
         <div class="selection" id="other-selection">
             <div id="new-filter">Neu</div>
