--- a/Ferienhaus_Apfelbluete_by_Heinke_Wohnraum.html
+++ b/Ferienhaus_Apfelbluete_by_Heinke_Wohnraum.html
@@ -14,7 +14,7 @@
 <div id="content">
     <h1 class="title">Ferienhaus Apfelblüte by Heinke Wohnraum</h1>
     <div id="image-viewer">
-        <img id="main-image" src="https://cf.bstatic.com/xdata/images/hotel/max1024x768/346273890.jpg?k=14261375253169a3e134482beddbd4282ef534bea5ef27151b21ada20fc6c593&o=&hp=1">
+        <img id="main-image">
         <div id="other-images"><img src="https://cf.bstatic.com/xdata/images/hotel/max1024x768/346273890.jpg?k=14261375253169a3e134482beddbd4282ef534bea5ef27151b21ada20fc6c593&o=&hp=1">
 <img src="https://cf.bstatic.com/xdata/images/hotel/max1024x768/346273860.jpg?k=74f027984cbb340772de64e7466ccedd9be695198b2cc4fb58489b1f74f7cc20&o=&hp=1">
 <img src="https://cf.bstatic.com/xdata/images/hotel/max1024x768/340097205.jpg?k=c963c7d17d3bf6ed994e78bc0aadef9a586ab186c7a915ef6f1300efe7e2d614&o=&hp=1">
