--- a/test1.html
+++ b/test1.html
@@ -14,7 +14,7 @@
 <div id="content">
     <h1 class="title">test1</h1>
     <div id="image-viewer">
-        <img id="main-image" src="">
+        <img id="main-image">
         <div id="other-images"><img src="">
 </div>
     </div>
