--- a/index.html
+++ b/index.html
@@ -12,12 +12,12 @@
 <body>
 <div class="header">
     <h1 class="title">Bessere Abifahrt</h1>
-    <h2 class="subtitle">Unterkunft- und Preisübersicht</h2><!--<br>WIP v471-->
+    <h2 class="subtitle">Unterkunft- und Preisübersicht</h2><!--<br>WIP v527-->
 </div>
 <div id="content">
     <div id="filter-div">
 <!--        <h1>Filter</h1>-->
-        <h2>Ort</h2>
+        <h2 id="#first-filter">Ort</h2>
         <table>
             <tr>
                 <th>Land</th>
