--- a/test1.html
+++ b/test1.html
@@ -60,7 +60,7 @@
     <div id="PersonInfo">
         <table class="location-table">
             <tr>
-                <td class="location-header">Max Pers. Zahl:</td>
+                <td class="location-header">Max Personen:</td>
                 <td>10</td>
             </tr>
         </table>
