--- a/Ferienhaus_Apfelbluete_by_Heinke_Wohnraum.html
+++ b/Ferienhaus_Apfelbluete_by_Heinke_Wohnraum.html
@@ -63,7 +63,7 @@
     <div id="PersonInfo">
         <table class="location-table">
             <tr>
-                <td class="location-header">Max Pers. Zahl:</td>
+                <td class="location-header">Max Personen:</td>
                 <td>13</td>
             </tr>
         </table>
