--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
 <div class="header">
     <h1 class="title">Bessere Abifahrt</h1>
-    <h2 class="subtitle">Unterkunft- und Preisübersicht</h2><!--<br>WIP v567-->
+    <h2 class="subtitle">Unterkunft- und Preisübersicht</h2><!--<br>WIP v568-->
 </div>
 <div id="content">
     <div id="filter-div">
@@ -24,18 +24,18 @@
             </tr>
             <tr>
                 <td class="selection" id="country-filter">
-<div>Deutschland</div>
 <div>Germany</div>
+<div>Deutschland</div>
 </td>
                 <td class="selection" id="region-filter">
-<div class="Deutschland">Baden-Württemberg</div>
 <div class="Germany">Berlin</div>
+<div class="Deutschland">Baden-Württemberg</div>
 <div class="Germany">Dresden</div>
 </td>
             </tr>
         </table>
         <h2>Umgebung</h2>
-        <div class="selection" id="surrounding-selection"><div style="background-color: #55FF55;">Wald</div><div style="background-color: #5555FF;">Fluss</div><div style="background-color: #FF5555;">Rot</div></div>
+        <div class="selection" id="surrounding-selection"><div style="background-color: #FF5555;">Rot</div><div style="background-color: #55FF55;">Wald</div><div style="background-color: #5555FF;">Fluss</div></div>
         <h2>Anderes</h2>
         <div class="selection" id="other-selection">
             <div id="new-filter">Neu</div>
