--- a/Ferienhaus_Apfelbluete_by_Heinke_Wohnraum.html
+++ b/Ferienhaus_Apfelbluete_by_Heinke_Wohnraum.html
@@ -85,7 +85,8 @@
 <tr><td>b</td><td>d</td></tr>
 
     </table>
-    <p id="information-date">* Der Preis ist für den Zeitraum vom 3.6. - 7.6.2024 und auf dem Stand vom 15.4.2023.</p>
+    <p id="information-date">* Der Preis ist für den Zeitraum vom 3.6. - 7.6.2024 und auf dem Stand vom
+        15.4.2023.</p>
     <p id="additional-information">Weitere Informationen auf <a href="https://www.booking.com/Share-dWOpjU" target="_blank"
                                                                 rel="noopener noreferrer">Booking.com</a>.</p>
 </div>
