--- a/index.html
+++ b/index.html
@@ -2,19 +2,19 @@
 <html lang="de" xmlns="http://www.w3.org/1999/html">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="stylesheet" href="global_style.css">
-    <link rel="stylesheet" href="index_style.css">
-    <link rel="stylesheet" href="index_mobile_style.css">
+    <meta content="width=device-width, initial-scale=1" name="viewport"/>
+    <link href="global_style.css" rel="stylesheet">
+    <link href="index_style.css" rel="stylesheet">
+    <link href="index_mobile_style.css" rel="stylesheet">
 
     <title>Bessere Abifahrt</title>
 </head>
 <body>
 <div class="header">
     <h1 class="title">Bessere Abifahrt</h1>
-    <h2 class="subtitle">Unterkunft- und Preisübersicht</h2><!--<br>WIP v568-->
+    <h2 class="subtitle">Unterkunft- und Preisübersicht</h2><!--<br>WIP v590-->
 </div>
-<div id="content">
+<div class="hidden" id="content">
     <div id="filter-div">
         <h2 id="#first-filter">Ort</h2>
         <table>
@@ -23,25 +23,28 @@
                 <th>Region</th>
             </tr>
             <tr>
-                <td class="selection" id="country-filter">
+                <td class="selection" id="country-filter"><div>Deutschland</div>
 <div>Germany</div>
-<div>Deutschland</div>
 </td>
-                <td class="selection" id="region-filter">
+                <td class="selection" id="region-filter"><div class="Deutschland">Baden-Württemberg</div>
 <div class="Germany">Berlin</div>
-<div class="Deutschland">Baden-Württemberg</div>
 <div class="Germany">Dresden</div>
 </td>
             </tr>
         </table>
         <h2>Umgebung</h2>
-        <div class="selection" id="surrounding-selection"><div style="background-color: #FF5555;">Rot</div><div style="background-color: #55FF55;">Wald</div><div style="background-color: #5555FF;">Fluss</div></div>
+        <div class="selection" id="surrounding-selection"><div style="background-color: #55FF55;">Wald</div><div style="background-color: #5555FF;">Fluss</div><div style="background-color: #FF5555;">Rot</div></div>
         <h2>Anderes</h2>
         <div class="selection" id="other-selection">
             <div id="new-filter">Neu</div>
         </div>
     </div>
     <div id="accommodations-div"></div>
+</div>
+<div class="warning" id="java-script-disabled-warning">
+    <h1>JavaScript Deaktiviert</h1>
+    <p>Diese Website benötigt JavaScript um funktionieren zu können.</p>
+    <p>Aktivieren sie JavaScript in ihrem Browser oder fügen sie diese Website den Ausnahmen hinzu.</p>
 </div>
 
 <script src="index_script.js"></script>
