--- a/test2.html
+++ b/test2.html
@@ -79,7 +79,8 @@
         <tr><td></td><td></td></tr>
 
     </table>
-    <p id="information-date">* Der Preis ist für den Zeitraum vom  und auf dem Stand vom .</p>
+    <p id="information-date">* Der Preis ist für den Zeitraum vom  und auf dem Stand vom
+        .</p>
     <p id="additional-information">Weitere Informationen auf <a href="" target="_blank"
                                                                 rel="noopener noreferrer">Booking.com</a>.</p>
 </div>
